# grpc_boilerplate

./: .flake8  .gitignore  MANIFEST.in  Makefile  Pipfile  README.md  example_grpc.py  example_grpcio.py  example_grpcio_aio.py  example_grpclib.py  helloworld.proto  mypy.ini  pyproject.toml  setup.py
grpc_boilerplate/: connectionstring.py  constants.py
grpc_boilerplate/grpcio_aio_tools/: client.py
grpc_boilerplate/grpcio_tools/: client.py
grpc_boilerplate/grpclib_tools/: client.py  server.py  server_middlewares.py  tls.py
grpc_boilerplate/pygrpc_tools/: client.py
tests/: test_connectionstring.py  test_grpcio_aio_tools.py  test_grpcio_tools.py
