[tool.poetry]
name = "grpc_boilerplate"
version = "0.5"
description = ""
authors = ["Dmirty Simonov <demalf@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^4.0.1"
grpcio = "^1.41.0"
grpclib = "^0.4.2"
management-commands = "^0.5"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
