[tool.poetry]
name = "grpc_boilerplate"
version = "0.7"
description = ""
authors = ["Dmirty Simonov <demalf@gmail.com>"]
license = "MIT"
include = ["grpc_boilerplate"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^4.0.1"
grpcio = "^1.41.0"
grpclib = "^0.4.2"
management-commands = "^0.5"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
grpcio-tools = "^1.41.1"
types-protobuf = "^3.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
